--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "paulbunyannet/image.php",
+    "name": "paulbunyannet/imagephp",
     "description": "Smart Image Resizer",
     "authors": [
         {
